# omnimagnet_driver

./: .gitignore  README.md
config/: params.yaml
magnet_test/: package.xml  setup.cfg  setup.py
magnet_test/magnet_test/: test_driver_services.py
omnimagnet_bringup/: CMakeLists.txt  package.xml
omnimagnet_driver/: CMakeLists.txt  package.xml
omnimagnet_driver/include/omnimagnet_driver/: omnimagnet.hpp  omnimagnet_driver.hpp  type.hpp
omnimagnet_driver/src/: omnimagnet.cpp  omnimagnet_driver.cpp  type.cpp
omnimagnet_interfaces/: CMakeLists.txt  package.xml
omnimagnet_interfaces/msg/: ErrorMessage.msg  FinishedMessage.msg
omnimagnet_interfaces/srv/: DriverReset.srv  MultiMagnetConstant.srv  MultiMagnetRotation.srv  SingleMagnetConstant.srv  SingleMagnetRotation.srv
